* Ensure that we don't clear a combined B_*_KEY as long as one of the   B_{LEFT|RIGHT}_*_KEYs is pressed for shift, command, control and option.   This fixes bug #3841. * Only send a B_MODIFIERS_CHANGED message when the modifiers actually changed. * Minor simplification to only check for the lock keys once. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30538 a95241bf-73f2-0310-859d-f6bbb57e9c96